--- a/Views/Schedule/Index.cshtml
+++ b/Views/Schedule/Index.cshtml
@@ -3,3 +3,49 @@
 *@
 @{
 }
+
+<body>
+    <div class="page-heading">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="header-text">
+                        <h2>Schedule</h2>
+                        <div class="div-dec"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <section class="what-we-do">
+        <div class="container">
+            <div class="row">
+                <div class="right-items">
+                    <div class="item">
+                        <em>01</em> <!-- time -->
+                        <h4>First Step</h4>
+                        <p>Pellentesque ipsum elit, congue a sapien laoreet, pellentesque ultricies risus.</p>
+                    </div>
+                    <div class="item">
+                        <em>02</em>
+                        <h4>Second Step</h4>
+                        <p>Pellentesque ipsum elit, congue a sapien laoreet, pellentesque ultricies risus.</p>
+                    </div>
+                    <div class="item">
+                        <em>03</em>
+                        <h4>Third Step</h4>
+                        <p>Pellentesque ipsum elit, congue a sapien laoreet, pellentesque ultricies risus.</p>
+                    </div>
+                    <div class="item">
+                        <em>04</em>
+                        <h4>Fourth Step</h4>
+                        <p>Pellentesque ipsum elit, congue a sapien laoreet, pellentesque ultricies risus.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section></section>
+</body>
