--- a/wwwroot/assets/css/templatemo-574-mexant.css
+++ b/wwwroot/assets/css/templatemo-574-mexant.css
@@ -669,90 +669,7 @@ header
 }
 
 
-/* 
----------------------------------------------
-banner
---------------------------------------------- 
-*/
 
-.swiper-container {
-  height: calc(100vh - 0px);
-  margin: 0px;
-  background-color: #212741;
-}
-
-.swiper-slide {
-  overflow: hidden;
-}
-
-.slide-inner {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background-size: cover;
-  background-position: center;
-}
-
-
-.slide-inner .header-text {
-  position: absolute;
-  width: 50%;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.slide-inner .header-text h2 {
-  position: relative;
-  z-index: 2;
-  font-size: 56px;
-  color: #fff;
-  font-weight: 700;
-  opacity: 1;
-  visibility: visible;
-  line-height: 70px;
-  margin-bottom: 40px;
-}
-
-.slide-inner .header-text .div-dec {
-  width: 80px;
-  height: 6px;
-  border-radius: 3px;
-  background-color: #fff;
-  margin-bottom: 40px;
-  opacity: 1;
-  visibility: visible;
-}
-
-.slide-inner .header-text p {
-  color: #fff;
-  margin-right: 60px;
-  margin-bottom: 50px;
-  opacity: 1;
-  visibility: visible;
-}
-
-.slide-inner .header-text h2 em {
-  font-style: normal;
-  color: #ff511a;
-}
-
-.slide-inner .header-text .buttons {
-  display: inline;
-  opacity: 1;
-  visibility: visible;
-}
-
-.slide-inner .header-text .buttons .green-button {
-  display: inline;
-  float: left;
-  margin-right: 20px;
-}
-
-.swiper-button-next, .swiper-button-prev {
-  color: #fff !important;
-}
 
 /*
 ---------------------------------------------
@@ -1119,30 +1036,6 @@ section.testimonials .section-heading {
 }
 
 
-
-/* 
----------------------------------------------
-partners
---------------------------------------------- 
-*/
-
-section.partners {
-  background-color: #212741;
-  padding: 80px 0px;
-}
-
-section.partners .item {
-  margin: 0px 15px;
-  cursor: pointer;
-  transition: all .3s;
-}
-
-section.partners .item:hover {
-  opacity: 0.75;
-}
-
-
-
 /* 
 ---------------------------------------------
 footer 
@@ -1258,7 +1151,7 @@ section.top-section .accordions {
   padding-top: 0;
 }
 
-section.what-we-do {
+.what-we-do {
   margin-bottom: -30px;
 }
 
@@ -1599,9 +1492,6 @@ body {
   .header-area {
     background-color: #212741;
   }
-  .slide-inner .header-text {
-    width: 80%;
-  }
   .simple-cta {
     text-align: center;
   }
@@ -1625,9 +1515,7 @@ body {
     max-width: 200px;
     right: 50px;
   }
-  section.partners .item {
-    margin:15px; 
-  }
+  
   section.top-section .accordions {
     margin-left: 0px;
     margin-top: 45px;
@@ -1682,25 +1570,6 @@ body {
   }
   .header-area .main-nav .nav li.has-sub ul.sub-menu {
     display: none;
-  }
-  .slide-inner .header-text p {
-    display: none;
-  }
-  .slide-inner .header-text {
-    text-align: center;
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-  }
-  .slide-inner .header-text .div-dec {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .slide-inner .header-text .buttons {
-    display: inline-flex;
-  }
-  .slide-inner .header-text .buttons .green-button {
-    float: none;
   }
   .services .service-item i {
     margin-bottom: 35px;
