--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,9 +33,8 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a asp-controller="Home" asp-action="Index">Home</a></li>
-                            <li class="scroll-to-section"><a href="index.html">Services</a></li>
+                            <li class="scroll-to-section"><a asp-controller="Company" asp-action="Index">Companies</a></li>
                             <li class="scroll-to-section"><a href="index.html">About</a></li>
-                            
                             <li class="scroll-to-section"><a href="index.html">Testimonials</a></li>
                             <li><a href="contact-us.html">Login / Register</a></li>
                         </ul>
