--- a/Views/Company/Create.cshtml
+++ b/Views/Company/Create.cshtml
@@ -56,7 +56,7 @@
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <button type="submit" id="form-submit" class="orange-button">Send Message</button>
+                  <button type="submit" id="form-submit" class="orange-button">Submit</button>
                 </fieldset>
               </div>
             </div>
