--- a/wwwroot/assets/css/templatemo-574-mexant.css
+++ b/wwwroot/assets/css/templatemo-574-mexant.css
@@ -1559,7 +1559,7 @@ section.map .info-item {
             color: #ff511a;
         }
 
-#contact input {
+#contact input, #contact select {
     width: 100%;
     height: 50px;
     background-color: #f7f7f7;
@@ -1588,7 +1588,8 @@ section.map .info-item {
 }
 
     #contact input::placeholder,
-    #contact textarea::placeholder {
+    #contact textarea::placeholder
+    #contact select::placeholder {
         color: #212741;
     }
 
