edit copany view, done main schedule part(db request, view, controller, repository)

--- a/Views/Company/Index.cshtml
+++ b/Views/Company/Index.cshtml
@@ -34,7 +34,11 @@
                                         {
                                             <text>@company.Description[i]</text>
                                         }
-                                        <text>...</text>
+                                    <text>...</text>
+                                    }
+                                    else
+                                    {
+                                        <text>@company.Description</text>
                                     }
                             </div>
                         </div>
