--- a/Views/Schedule/Create.cshtml
+++ b/Views/Schedule/Create.cshtml
@@ -23,8 +23,8 @@
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
                     <div class="section-heading">
-                        <h6>Found your own company</h6>
-                        <h4>Feel all required fields</h4>
+                        <h6>make your meeting</h6>
+                        <h4>Fill all required fields</h4>
                     </div>
                 </div>
                 <div class="col-lg-10 offset-lg-1">
