--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <li class="scroll-to-section"><a asp-controller="home" asp-action="Index">Home</a></li>
                             <li class="scroll-to-section"><a asp-controller="company" asp-action="Index">Companies</a></li>
                             <li class="scroll-to-section"><a href="index.html">About</a></li>
-                            <li class="scroll-to-section"><a href="index.html">Testimonials</a></li>
+                            <li class="scroll-to-section"><a asp-controller="schedule" asp-action="Index">Schedule</a></li>
                             <li><a href="contact-us.html">Login / Register</a></li>
                         </ul>
                         <a class='menu-trigger'>
