--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                                 <div class="header-text">
                                     <h2>Make <em>your</em> own <br /><em>Appointment</em> Schedule</h2>
                                     <div class="div-dec"></div>
-                                    <p>This appointment schedule solves the problem of late employees. <br />It has some features to make your staff come to meeting in a time</p>
+                                    <p>This appointment schedule solves the problem of late employees. <br />It has some features to make your staff come to meeting in time</p>
                                     <div class="buttons">
                                         <div class="green-button">
                                             <a href="#">Get Started As Emploee</a>
