--- a/Views/Schedule/Create.cshtml
+++ b/Views/Schedule/Create.cshtml
@@ -34,6 +34,7 @@
                                 <fieldset>
                                     <input asp-for="Title" type="text" placeholder="Meeting Title..." required="">
                                 </fieldset>
+                                <span class="text-danger" asp-validation-for="Title" />
                             </div>
                             <div class="col-lg-6">
                                 <fieldset>
@@ -44,6 +45,7 @@
                                 <fieldset>
                                     <input asp-for="Cabinet" type="text" placeholder="Meeting Cabinet..." required="">
                                 </fieldset>
+                                <span class="text-danger" asp-validation-for="Cabinet" />
                             </div>
                             <div class="col-lg-6">
                                 <div class="row">
@@ -51,6 +53,7 @@
                                         <fieldset>
                                             <input asp-for="Date.Day" type="text" placeholder="Day..." required="">
                                         </fieldset>
+                                        <span class="text-danger" asp-validation-for="Date.Day" />
                                     </div>
                                     <div class="col-lg-4">
                                         <fieldset>
@@ -63,6 +66,7 @@
                                         <fieldset>
                                             <input asp-for="Date.Year" type="text" placeholder="Year..." required="">
                                         </fieldset>
+                                        <span class="text-danger" asp-validation-for="Date.Year" />
                                     </div>
                                 </div>
                             </div>
@@ -70,6 +74,7 @@
                                 <fieldset>
                                     <input asp-for="Time" type="text" placeholder="Time..." required="">
                                 </fieldset>
+                                <span class="text-danger" asp-validation-for="Time" />
                             </div>
                             <div class="col-lg-12">
                                 <fieldset>
