--- a/wwwroot/assets/css/templatemo-574-mexant.css
+++ b/wwwroot/assets/css/templatemo-574-mexant.css
@@ -1578,6 +1578,25 @@ section.map .info-item {
             color: #ff511a;
         }
 
+#section.login-form {
+    position: center;
+    align-items: center;
+}
+
+#contact input.form-check-input {
+    width: 4%;
+    height: 20px;
+    margin-top: 30px;
+    background-color: #ff511a;
+    color: #fff;
+}
+
+#contact label.form-check-label {
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+
 #contact input, #contact select {
     width: 100%;
     height: 50px;
