add special references for login/register, fix home view, login view register view. Make website more comfortable

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -20,6 +20,11 @@
     <section class="contact-us-form">
         <div class="container">
             <div class="row">
+                <div class="col-lg-6 offset-lg-3">
+                    <div class="section-heading">
+                        <h4>If you already have account:<br /><a asp-controller="account" asp-action="login" class="text-decoration-underline">Login</a></h4>
+                    </div>
+                </div>
                 <div class="col-lg-10 offset-lg-1">
                     <form id="contact" asp-controller="account" asp-action="register" method="post" enctype="multipart/form-data">
                         <div class="row">
