--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,10 +16,10 @@
                                     <p>This appointment schedule solves the problem of late employees. <br />It has some features to make your staff come to meeting in time</p>
                                     <div class="buttons">
                                         <div class="green-button">
-                                            <a href="#">Get Started As Emploee</a>
+                                            <a asp-controller="account" asp-action="login">Log in</a>
                                         </div>
                                         <div class="orange-button">
-                                            <a href="#">Get Started As Company</a>
+                                            <a asp-controller="account" asp-action="register">Get Started</a>
                                         </div>
                                     </div>
                                 </div>
