--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                             <li class="scroll-to-section"><a asp-controller="schedule" asp-action="Index">Schedule</a></li> 
                             <li class="scroll-to-section"><a asp-controller="company" asp-action="Index">Companies</a></li>
                             <li class="scroll-to-section"><a href="index.html">About</a></li>
-                            <li><a href="contact-us.html">Login / Register</a></li>
+                            <li><a asp-controller="account" asp-action="Login">Login / Register</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
