match company and user and rev

--- a/Views/Company/About.cshtml
+++ b/Views/Company/About.cshtml
@@ -48,7 +48,7 @@
                                     </ul>
                                 </list>
                                 <div class="green-button">
-                                    @
+                                    <a asp-controller="company" asp-action="match" asp-route-id="@Model.Id">Enter Company</a>
                                 </div>
                             </div>
                         </div>
