fix bugs with companies and add some new with schedule

--- a/Views/Schedule/Index.cshtml
+++ b/Views/Schedule/Index.cshtml
@@ -1,11 +1,10 @@
 ﻿@using AppointmentScheduleSystem.Data.Enum
 @using Microsoft.AspNetCore.Identity
+@using AppointmentScheduleSystem.Repositiry
 @inject SignInManager<AppUser> SignInManager
-@model IEnumerable<Schedule>
+@model List<Schedule>
 
-@{
-    ViewData["Title"] = "Schedule";
-    
+@{    
 }
 
 <body>
